src/test/ui/issues/30000-39999/issue-33464.rs
// Make sure that the spans of import errors are correct.

use abc::one_el;
//~^ ERROR
use abc::{a, bbb, cccccc};
//~^ ERROR
use a_very_long_name::{el, el2};
//~^ ERROR

fn main() {}
